[gd_scene load_steps=3 format=2]

[ext_resource path="res://MemoryConsumption.gd" type="Script" id=1]
[ext_resource path="res://TypeLine.tscn" type="PackedScene" id=2]

[node name="MemoryConsumption" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectAmount" type="SpinBox" parent="."]
margin_left = 131.122
margin_top = 204.541
margin_right = 306.122
margin_bottom = 228.541
min_value = 100000.0
max_value = 1e+08
step = 1000.0
value = 100000.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lines" type="VBoxContainer" parent="."]
margin_left = 17.0
margin_top = 29.0
margin_right = 329.0
margin_bottom = 176.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="integer" parent="Lines" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 312.0
margin_bottom = 20.0

[node name="ButtonType" parent="Lines/integer" index="0"]
margin_right = 117.0
text = "integer"

[node name="Amount" parent="Lines/integer" index="1"]
margin_left = 121.0
margin_right = 238.0

[node name="ButtonCompute" parent="Lines/integer" index="2"]
margin_left = 242.0
margin_right = 311.0

[node name="pool integer" parent="Lines" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 312.0
margin_bottom = 44.0

[node name="ButtonType" parent="Lines/pool integer" index="0"]
margin_right = 117.0

[node name="Amount" parent="Lines/pool integer" index="1"]
margin_left = 121.0
margin_right = 238.0

[node name="ButtonCompute" parent="Lines/pool integer" index="2"]
margin_left = 242.0
margin_right = 311.0

[node name="object" parent="Lines" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 48.0
margin_right = 312.0
margin_bottom = 68.0

[node name="ButtonType" parent="Lines/object" index="0"]
margin_right = 117.0

[node name="Amount" parent="Lines/object" index="1"]
margin_left = 121.0
margin_right = 238.0

[node name="ButtonCompute" parent="Lines/object" index="2"]
margin_left = 242.0
margin_right = 311.0

[node name="reference" parent="Lines" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 72.0
margin_right = 312.0
margin_bottom = 92.0

[node name="ButtonType" parent="Lines/reference" index="0"]
margin_right = 117.0

[node name="Amount" parent="Lines/reference" index="1"]
margin_left = 121.0
margin_right = 238.0

[node name="ButtonCompute" parent="Lines/reference" index="2"]
margin_left = 242.0
margin_right = 311.0

[node name="resource" parent="Lines" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 96.0
margin_right = 312.0
margin_bottom = 116.0

[node name="ButtonType" parent="Lines/resource" index="0"]
margin_right = 117.0

[node name="Amount" parent="Lines/resource" index="1"]
margin_left = 121.0
margin_right = 238.0

[node name="ButtonCompute" parent="Lines/resource" index="2"]
margin_left = 242.0
margin_right = 311.0

[node name="node" parent="Lines" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 120.0
margin_right = 312.0
margin_bottom = 140.0

[node name="ButtonType" parent="Lines/node" index="0"]
margin_right = 117.0

[node name="Amount" parent="Lines/node" index="1"]
margin_left = 121.0
margin_right = 238.0

[node name="ButtonCompute" parent="Lines/node" index="2"]
margin_left = 242.0
margin_right = 311.0
[connection signal="toggled" from="Lines/integer/ButtonCompute" to="." method="_on_ButtonAddInts_pressed"]

[editable path="Lines/integer"]

[editable path="Lines/pool integer"]

[editable path="Lines/object"]

[editable path="Lines/reference"]

[editable path="Lines/resource"]

[editable path="Lines/node"]
